(FIX) -Intentionality issue .collect(Collectors.toList()); change to .toList();